--- a/app/index.html
+++ b/app/index.html
@@ -58,9 +58,9 @@
   <div id="main" role="main">
     <section>
       <h1>Political Donations</h1>
-      <div id="two-party-comparison-container">
-        <svg></svg>
-      </div>
+      <div id="two-party-comparison-container"></div>
+      <div id="labor-container"></div>
+      <div id="coalition-container"></div>
     </section>
   </div>
 
