--- a/app/index.html
+++ b/app/index.html
@@ -57,11 +57,12 @@
 
   <div id="main" role="main">
     <section>
-      <h1>Political Donations</h1>
+      <h1>Political Donations Charts</h1>
       <div id="two-party-comparison-container"></div>
       <div id="labor-container"></div>
       <div id="coalition-container"></div>
     </section>
+    <div class="kitty-chan"></div>
   </div>
 
   <!-- build:js /js/main.js -->
