--- a/app/index.html
+++ b/app/index.html
@@ -36,33 +36,13 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-  <header class="navbar special-feature" role="banner">
-    <a href="http://www.theglobalmail.org/" class="brand brand-center" title="Go to The Global Mail">The Global Mail</a>
-
-    <div class="special-feature-misc">
-      <div class="special-feature-links">
-        <a href="#about-modal" data-toggle="modal" data-bypass>About</a>
-      </div>
-
-      <div class="share-button twitter">
-        <a href="https://twitter.com/share" class="twitter-share-button" data-via="TheGlobalMail" data-hashtags="auspol">Tweet</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-      </div>
-
-      <div class="share-button facebook">
-        <div class="fb-like" data-send="false" data-layout="button_count" data-width="45" data-show-faces="false" data-colorscheme="light" data-action="like"></div>
-      </div>
-    </div>
-  </header>
 
   <div id="main" role="main">
     <section>
-      <h1>Political Donations Charts</h1>
       <div id="two-party-comparison-container"></div>
-      <div id="labor-container"></div>
-      <div id="coalition-container"></div>
+      <!-- <div id="labor-container"></div> -->
+      <!-- <div id="coalition-container"></div> -->
     </section>
-    <div class="kitty-chan"></div>
   </div>
 
   <!-- build:js /js/main.js -->
