--- a/app/index.html
+++ b/app/index.html
@@ -40,9 +40,9 @@
   <div id="main" role="main">
     <section>
       <h1>Donations VS Two-party preferred Poll</h1>
-      <div id="two-party-comparison-container"></div>
-      <!-- <div id="labor-container"></div> -->
-      <!-- <div id="coalition-container"></div> -->
+      <!--<div id="two-party-comparison-container"></div>-->
+       <div id="labor-container"></div>
+       <div id="coalition-container"></div>
     </section>
   </div>
 
