Splitting into 2 graphs

--- a/app/index.html
+++ b/app/index.html
@@ -39,9 +39,9 @@
 
   <div id="main" role="main">
     <section>
-      <h1>Donations VS Two-party preferred Poll</h1>
-      <!--<div id="two-party-comparison-container"></div>-->
+      <h2>Donations to the ALP vs Two-party preferred Poll</h2>
        <div id="labor-container"></div>
+      <h2>Donations to the Coalition vs Two-party preferred Poll</h2>
        <div id="coalition-container"></div>
     </section>
   </div>
