--- a/app/index.html
+++ b/app/index.html
@@ -45,15 +45,14 @@
           Intro Praesent Id Metus Massa, Ut Blandit Odio. Proin Quis Tortor Orci. Etiam At Risus Et Justo
         </strong>
         Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna.
-
       </p>
     </header>
 
 
     <section>
-      <h2>Donations to the ALP vs Two-party preferred Poll</h2>
+      <h2>ALP: Donations vs. 2 Party Preferred</h2>
        <div id="labor-container"></div>
-      <h2>Donations to the Coalition vs Two-party preferred Poll</h2>
+      <h2>Coalition: Donations vs. 2 Party Preferred</h2>
        <div id="coalition-container"></div>
     </section>
 
