note about election years

--- a/app/index.html
+++ b/app/index.html
@@ -40,18 +40,19 @@
   <div id="main" role="main">
     <header class="viz-overview">
       <h1 class="viz-title">Donations Data</h1>
-      <p class="viz-intro-text">
+      <p>
         <strong>
           Intro Praesent Id Metus Massa, Ut Blandit Odio. Proin Quis Tortor Orci. Etiam At Risus Et Justo
         </strong>
         Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna.
       </p>
+      <p>
+        Hilighted years indicate federal elections.
+      </p>
     </header>
 
 
     <section>
-      <h1>Donations VS Two-party preferred Poll</h1>
-      <!--<div id="two-party-comparison-container"></div>-->
       <h2>Coalition: Donations vs. 2 Party Preferred</h2>
       <div id="coalition-container"></div>
       <h2>ALP: Donations vs. 2 Party Preferred</h2>
