--- a/app/index.html
+++ b/app/index.html
@@ -46,17 +46,20 @@
         </strong>
         Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna.
       </p>
-      <p>
-        Hilighted years indicate federal elections.
-      </p>
     </header>
 
 
     <section>
       <h2>Coalition: Donations vs. 2 Party Preferred</h2>
       <div id="coalition-container"></div>
+      <p class="explainer">
+        <em>Highlighted years</em> indicate federal elections
+      </p>
       <h2>ALP: Donations vs. 2 Party Preferred</h2>
       <div id="labor-container"></div>
+      <p class="explainer">
+        <em>Highlighted years</em> indicate federal elections
+      </p>
     </section>
 
     <div class="credit">
