--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Political Donations | The Global Mail</title>
+  <title>Money Votes | The Global Mail</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.5">
 
@@ -39,23 +39,22 @@
 
   <div id="main" role="main">
     <header class="viz-overview">
-      <h1 class="viz-title">Donations Data</h1>
+      <h1 class="viz-title">Money Votes</h1>
       <p>
         <strong>
-          Intro Praesent Id Metus Massa, Ut Blandit Odio. Proin Quis Tortor Orci. Etiam At Risus Et Justo
+          Political donations talk especially loudly to the party in power — or looking like it's about to be.
         </strong>
-        Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna.
       </p>
     </header>
 
 
     <section>
-      <h2>Coalition: Donations vs. 2 Party Preferred</h2>
+      <h2>Coalition: Donations Received vs. Two-Party Preferred</h2>
       <div id="coalition-container"></div>
       <p class="explainer">
         <em>Highlighted years</em> indicate federal elections
       </p>
-      <h2>ALP: Donations vs. 2 Party Preferred</h2>
+      <h2>ALP: Donations Received vs. Two-Party Preferred</h2>
       <div id="labor-container"></div>
       <p class="explainer">
         <em>Highlighted years</em> indicate federal elections
