--- a/app/index.html
+++ b/app/index.html
@@ -42,22 +42,22 @@
       <h1 class="viz-title">Money Votes</h1>
       <p>
         <strong>
-          Political donations talk especially loudly to the party in power — or looking like it's about to be.
+          Political donations talk especially loudly to the party in power —<br/>or looking like it's about to be.
         </strong>
       </p>
     </header>
 
 
     <section>
-      <h2>Coalition: Donations Received vs. Two-Party Preferred</h2>
+      <h2><em class="coalition">Coalition</em>: Donations Received vs. Two-Party Preferred</h2>
       <div id="coalition-container"></div>
       <p class="explainer">
-        <em>Highlighted years</em> indicate federal elections
+        Federal elections are hilighted. <em class="coalition">Coalition victories in blue</em>, <em class="labor">Labor victories in red</em>.
       </p>
-      <h2>ALP: Donations Received vs. Two-Party Preferred</h2>
+      <h2><em class="labor">ALP</em>: Donations Received vs. Two-Party Preferred</h2>
       <div id="labor-container"></div>
       <p class="explainer">
-        <em>Highlighted years</em> indicate federal elections
+        Federal elections are hilighted. <em class="coalition">Coalition victories in blue</em>, <em class="labor">Labor victories in red</em>.
       </p>
     </section>
 
