--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
       <h1 class="viz-title">Money Votes</h1>
       <p>
         <strong>
-          Political donations talk especially loudly to the party <br> in power — or looking like it's about to be.
+          Political donations talk especially loudly to the party <br> in power &mdash; or looking like it's about to be.
         </strong>
       </p>
     </header>
