--- a/app/index.html
+++ b/app/index.html
@@ -52,12 +52,12 @@
       <h2><em class="coalition">Coalition</em>: Donations Received vs.<br/> Two-Party Preferred Vote</h2>
       <div id="coalition-container"></div>
       <p class="explainer">
-        Federal elections are hilighted. <em class="coalition">Coalition victories in blue</em>, <em class="labor">Labor victories in red</em>.
+        Years with federal elections are highlighted. <em class="coalition">Coalition victories in blue</em>, <em class="labor">Labor victories in red</em>.
       </p>
       <h2><em class="labor">ALP</em>: Donations Received vs.<br/> Two-Party Preferred Vote</h2>
       <div id="labor-container"></div>
       <p class="explainer">
-        Federal elections are hilighted. <em class="coalition">Coalition victories in blue</em>, <em class="labor">Labor victories in red</em>.
+        Years with federal elections are highlighted. <em class="coalition">Coalition victories in blue</em>, <em class="labor">Labor victories in red</em>.
       </p>
     </section>
 
